--- a/app/src/main/res/layout/activity_carousel_one.xml
+++ b/app/src/main/res/layout/activity_carousel_one.xml
@@ -42,14 +42,16 @@
         android:textSize="28sp"
         android:layout_centerHorizontal="true" />
 
-    <Button
-        android:text="Button"
+    <ImageButton
+        android:text="@string/emptyString"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/next_button"
-        android:onClick="carouselTwo"/>
+        android:onClick="carouselTwo"
+        android:background="@android:color/transparent"
+        android:src="@drawable/right_arrow3"/>
 
 
 </RelativeLayout>
