--- a/app/src/main/res/layout/activity_carousel_one.xml
+++ b/app/src/main/res/layout/activity_carousel_one.xml
@@ -4,54 +4,56 @@
     android:id="@+id/activity_carousel_one"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorBackground"
-    tools:context="com.bitthebyte.kostasavgitidis.hungrydragon.CarouselOne"
-    >
+    tools:context="com.bitthebyte.kostasavgitidis.hungrydragon.CarouselOne">
 
 
     <ImageView
         android:id="@+id/dragonImageView"
         android:layout_width="240dp"
         android:layout_height="390dp"
-        android:src="@drawable/dragon_right"
-        android:layout_marginStart="13dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="13dp"
+        android:src="@drawable/dragon_right" />
 
     <ImageView
         android:id="@+id/bubble_ImageView"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/yes_bubble"
-        android:padding="0dp"
-        android:layout_marginTop="70dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="22dp" />
+        android:layout_below="@+id/textView"
+        android:layout_marginEnd="23dp"
+        android:layout_marginTop="45dp"
+        android:padding="0dp"
+        android:src="@drawable/yes_bubble" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp"
+        android:text="@string/introduction_text"
         android:textAlignment="center"
         android:textColor="@color/colorText"
-        android:text="@string/introduction_text"
-        android:textSize="28sp"
-        android:layout_centerHorizontal="true" />
+        android:textSize="28sp" />
 
     <ImageButton
-        android:text="@string/emptyString"
+        android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/next_button"
-        android:onClick="carouselTwo"
         android:background="@android:color/transparent"
-        android:src="@drawable/right_arrow3"/>
+        android:onClick="carouselTwo"
+        android:src="@drawable/right_arrow3"
+        android:text="@string/emptyString" />
 
 
 </RelativeLayout>
