--- a/app/src/main/res/layout/activity_carousel_two.xml
+++ b/app/src/main/res/layout/activity_carousel_two.xml
@@ -4,10 +4,45 @@
     android:id="@+id/activity_carousel_two"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.bitthebyte.kostasavgitidis.hungrydragon.CarouselTwo">
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="26dp"
+        android:text="@string/carousel_two"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"
+        android:textSize="28sp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="240dp"
+        android:layout_height="390dp"
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/dragon_right2" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:width="200dp"
+        android:height="60dp"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:onClick="jumpToMainScreen"
+        android:text="@string/lets_go_button"
+        android:textAllCaps="false" />
 
 </RelativeLayout>
