--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,66 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
-    tools:context="com.bitthebyte.kostasavgitidis.hungrydragon.MainActivity">
+    android:orientation="vertical"
+    tools:context="com.bitthebyte.kostasavgitidis.hungrydragon.MainActivity"
+    android:background="@color/colorBackground">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/custom_toolbar"
-        >
 
-    </include>
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/dragon_right" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="36dp"
-        android:width="200dp"
-        android:height="60dp"
-        android:background="@drawable/button_bg_rounded_corners"
-        android:onClick="jumpToRecipeSearch"
-        android:text="@string/search_recipes"
-        android:textAllCaps="false"
-        android:textColor="@color/colorText" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/imageView2"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/pizza_bubble" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/include"
-        android:layout_marginEnd="49dp"
-        android:layout_marginTop="21dp"
-        android:src="@drawable/burger_bubble" />
-
-    <ImageView
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_above="@+id/button"
-        android:layout_alignStart="@+id/imageView4"
-        android:src="@drawable/cake_bubble" />
-
-</RelativeLayout>
+    <ListView
+        android:id="@+id/lvRecipes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:dividerHeight="10.0sp"/>
+</LinearLayout>
