--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#039be5</color>
-    <color name="colorPrimaryDark">#0277bd</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="colorBackground">#039be5</color>
-    <color name="colorButton">#fb8c00</color>
+    <color name="colorPrimaryDark">#00182c</color>
+    <color name="colorAccent">#a83252</color>
+    <color name="colorBackground">#052539</color>
+    <color name="colorButton">#e97801</color>
     <color name="colorText">#FFFFFF</color>\
     <color name="colorBlack">#000000</color>
     <color name="colorTransparent">#80000000</color>
