--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:orientation="vertical"
-    tools:context="com.bitthebyte.kostasavgitidis.hungrydragon.MainActivity"
-    android:background="@color/colorBackground">
+    tools:context="com.bitthebyte.kostasavgitidis.hungrydragon.MainActivity">
 
+    <include
+        android:id="@+id/include"
+        layout="@layout/custom_toolbar"></include>
 
     <ListView
         android:id="@+id/lvRecipes"
@@ -14,5 +17,5 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:dividerHeight="10.0sp"/>
+        android:dividerHeight="10.0sp" />
 </LinearLayout>
